[package]
name = "proxide"
version = "0.1.0"
edition = "2021"
authors = ["github.com/Jaxii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ['full'] }
rayon = "1.5.3"
reqwest = "0.11.11"
anyhow = "1.0.58"