[package]
name = "proxide"
version = "0.1.0"
edition = "2021"
authors = ["github.com/Jaxii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ['full'] }
rayon = "1.8.0"
reqwest = "0.11.22"
anyhow = "1.0.75"
nanorand = "0.7.0"